--- a/package.json
+++ b/package.json
@@ -1,28 +1,19 @@
 {
-  "name": "nearbiz-node",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch src/server.local.js",
-    "start": "node server.js"
-  },
-  "engines": {
-    "node":  "20.x"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "name": "nearbiz-node-api",
+  "private": true,
   "type": "commonjs",
+  "engines": {
+    "node": "22.x"
+  },
   "dependencies": {
-    "@vercel/node": "^2.15.10",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.1",
-    "pg": "^8.16.3",
-    "serverless-http": "^3.2.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.11.3"
+  },
+  "scripts": {
+    "dev": "node server.local.js"
   }
 }
