test otros metodos

--- a/.env
+++ b/.env
@@ -1,12 +1,5 @@
 # Postgres (Supabase)
-PG_CONNECTION=postgresql://postgres:LxapS8SsWht6kSRX@db.bfkzgpumokljugdfbfwp.supabase.co:5432/postgres
-DATABASE_URL=postgresql://postgres:LxapS8SsWht6kSRX@db.bfkzgpumokljugdfbfwp.supabase.co:5432/postgres
-# si prefieres formato largo, elimina DATABASE_URL y usa los siguientes:
-# PGHOST=db.kjds.supabase.co
-# PGDATABASE=postgres
-# PGUSER=postgres
-# PGPASSWORD=TU_PASSWORD
-# PGPORT=5432
+DATABASE_URL=postgresql://postgres.bfkzgpumokljugdfbfwp:LxapS8SsWht6kSRX@aws-1-us-east-1.pooler.supabase.com:6543/postgres
 
 # Forzar SSL con cert auto-firmado de Supabase
 PGSSLMODE=require
@@ -20,4 +13,4 @@ JWT_EXPIRES_IN=1d
 
 PORT=8080
 
-DB_SSL=disable
+ALLOW_ORIGIN=*
