--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "node": "22.x"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.10",
     "pg": "^8.11.3"
   },
   "scripts": {
